--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,7 @@
 allprojects {
     repositories {
+        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
         mavenCentral()
     }
